refactor(compat): Downgrade project to Java 8 for wider compatibility
This commit refactors the codebase to target Java 1.8 instead of Java 17. The primary motivation is to ensure the plugin runs on a broader range of Minecraft servers, many of which still use older Java versions.

This downgrade required significant code modifications to remove or replace language features and APIs introduced after Java 8.

Key changes include:

* **Converted Records to Classes:**
    * `PinataType` and `ScheduledEventConfig` were changed from `record` types (Java 16+) to traditional `final class` structures.
    * Explicit getters, constructors, `equals()`, `hashCode()`, and `toString()` methods were added to replicate the functionality of records.

* **Replaced Modern APIs with Java 8 Equivalents:**
    * Replaced `stream.toList()` (Java 16+) with `stream.collect(Collectors.toList())`.
    * Replaced `List.of()` and `List.of()` (Java 9+) with `Collections.emptyList()` and `Collections.singletonList()`.
    * Replaced `optional.isEmpty()` (Java 11+) with `!optional.isPresent()`.
    * Removed modern pattern matching for `instanceof` in favor of explicit casting.

* **Performance-Related Reversal:**
    * Replaced `StringBuilder` with `StringBuffer`. While the goal of the original patch title was to improve performance, this specific change does the opposite in single-threaded contexts by introducing unnecessary synchronization. This was likely an oversight during the large-scale refactoring for compatibility.

* **General Code Cleanup:**
    * Improved type safety by casting to wrapper types (e.g., `(Integer)`) instead of primitives when retrieving from maps.